# lote

./: .cursorrules  README.md  TODO.md  package-lock.json  package.json  run.sh
client/: package.json
client/src/: App.css  App.tsx  ConversationEntry.css  ConversationEntry.tsx  Recording.ts  index.css
server/: .gitignore  CMakeLists.txt  README.md  package.json  tsconfig.json
server/include/: lote.hpp
server/src/: index.ts  lote.cpp  module.cpp
